Image correction
I have corrected a Image edges overlapping with project layout

--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@
         }
         .project1-image, .project2-image {
             width: 100%;
-            height: 270px;
+            height: 240px;
             padding: 30px;
             object-fit: cover;
             transition: transform 0.5s ease;
